   * Fixed an infinite loop issue when no music tracks could be loaded
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)
   * Fixed a bug with auto-stored WML variables not being restored correctly
   * Fixed a crash when sighted event killed the attacked unit
   * Limit the maximum length of the mp command dialog as workaround for bug
     #13333 (This workaround is only implemented for Windows and Mac)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6:
 * Campaigns:
   * Under the Burning Suns:
     * All portraits now have a transparent background (bug #13135)
 * Graphics:
   * New or updated unit graphics for the Mermaid Priestess and Enchantress
     unit lines
 * Language and i18n:
   * updated translations: Finnish, French, German, Lithuanian, Polish,
     Portuguese (Brazil), Russian, Slovak, Spanish
 * User interface:
   * Grey game titles out when we're missing the era
   * Fix a dialog size problem returning invalid sizes (bug #13203)
 * WML Engine:
   * Increase the map size limit to 1000 by 1000
   * Added an 'always_display' key to [advancement] to make it possible to show
     the advance dialog even with just one option.
   * weapon filters now recognize the id= attribute of specials (bug #13193)
 * Miscellaneous and bug fixes:
   * Fixed bug #13204: NR: Death event doesn't re-spawn Malifor as expected
   * Fixed bug #13198: Corrupt replay in MP