@@ -40,6 +40,7 @@ Version 1.6.1:
      (impacts "submerge" animations and AI settings)
    * Fixed a bug with auto-stored WML variables not being restored correctly
    * Fixed a crash when sighted event killed the attacked unit
+   * Fixed control transfer after player leaves MP game (bug #13238)
    * Limit the maximum length of the mp command dialog as workaround for bug
      #13333 (This workaround is only implemented for Windows and Mac)
 
